update Dockerfile - use commit d92a638